--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,7 +13,7 @@
 <div class="container-fluid">
     <div class="row">
 
-        <div class="col-md-3 col-lg-2 sidebar p-4">
+        <div class="col-md-3 col-lg-2 sidebar p-4" id="sidebar">
             <h4 class="text-center mb-4">Dashboard</h4>
             <ul class="nav flex-column">
                 <li class="nav-item">
@@ -21,9 +21,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('submit_idea') }}">Submit New Idea</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
             </ul>
         </div>
@@ -40,6 +37,9 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <span class="nav-link">Welcome, {{ current_user.username }}!</span>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -89,5 +89,11 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function toggleSidebar() {
+        const sidebar = document.getElementById('sidebar');
+        sidebar.classList.toggle('show');
+    }
+</script>
 </body>
 </html>
